src/snapshots/alma__parser__tests__module_parser-54.snap
---
source: src/parser.rs
expression: "parse(\"\\\nmodule Test exposing (Fruit)\n\ntype Fruit a b = Fruit (a -> b)\n\")"

---
Input:

module Test exposing (Fruit)

type Fruit a b = Fruit (a -> b)


Result:

(
    Module {
        name: ModuleName {
            parts: [
                Node {
                    start: 7,
                    end: 11,
                    line: 1,
                    column: 7,
                    value: CapitalizedIdentifier_ {
                        name: SymbolU32 {
                            value: 1,
                        },
                    },
                },
            ],
            full_name: SymbolU32 {
                value: 1,
            },
        },
        exports: [
            Node {
                start: 22,
                end: 27,
                line: 1,
                column: 22,
                value: Type(
                    Node {
                        start: 22,
                        end: 27,
                        line: 1,
                        column: 22,
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    [],
                ),
            },
        ],
        imports: [],
        definitions: [],
        type_definitions: [
            Node {
                start: 30,
                end: 61,
                line: 3,
                column: 0,
                value: TypeDefinition_ {
                    name: Node {
                        start: 35,
                        end: 40,
                        line: 3,
                        column: 5,
                        value: CapitalizedIdentifier_ {
                            name: SymbolU32 {
                                value: 2,
                            },
                        },
                    },
                    vars: [
                        Node {
                            start: 41,
                            end: 42,
                            line: 3,
                            column: 11,
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 3,
                                },
                            },
                        },
                        Node {
                            start: 43,
                            end: 44,
                            line: 3,
                            column: 13,
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 4,
                                },
                            },
                        },
                    ],
                    typ: Union(
                        [
                            Node {
                                start: 47,
                                end: 61,
                                line: 3,
                                column: 17,
                                value: Constructor_ {
                                    name: Node {
                                        start: 47,
                                        end: 52,
                                        line: 3,
                                        column: 17,
                                        value: CapitalizedIdentifier_ {
                                            name: SymbolU32 {
                                                value: 2,
                                            },
                                        },
                                    },
                                    params: [
                                        Fun(
                                            [
                                                Var(
                                                    Node {
                                                        start: 54,
                                                        end: 55,
                                                        line: 3,
                                                        column: 24,
                                                        value: Identifier_ {
                                                            name: SymbolU32 {
                                                                value: 3,
                                                            },
                                                        },
                                                    },
                                                ),
                                            ],
                                            Var(
                                                Node {
                                                    start: 59,
                                                    end: 60,
                                                    line: 3,
                                                    column: 29,
                                                    value: Identifier_ {
                                                        name: SymbolU32 {
                                                            value: 4,
                                                        },
                                                    },
                                                },
                                            ),
                                        ),
                                    ],
                                },
                            },
                        ],
                    ),
                },
            },
        ],
    },
    [],
)
